added more propertys to the table in index.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
       <thead>
         <tr>
         
+          <th scope="col" >ID Number</th>
           <th scope="col" >First Name</th>
           <th scope="col">Last Name</th>
-          <th scope="col">Age</th>
-          <th scope="col">Height</th>
+          <th scope="col">Gender</th>
+          <th scope="col">Date of Birth</th>
           <th scope="col">Weight</th>
+          <th scope="col">Eye Color</th>
+          <th scope="col">Parents</th>
+          <th scope="col">Current Spouse</th>
         </tr>
       </thead>
       <tbody>
