--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <th scope="col">Last Name</th>
           <th scope="col">Gender</th>
           <th scope="col">Date of Birth</th>
+          <th scope="col">Height</th>
           <th scope="col">Weight</th>
           <th scope="col">Eye Color</th>
           <th scope="col">Parents</th>
