added forms for Id, Gender, DOB, Height, Weight, Eye Color to index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
   </head>
   <body>
     <form id="nameForm">
-        <label for="fname">First name:</label><br>
+      <label for="peopleId">Id:</label><br>
+        <input type="text" id="peopleId" name="peopleId" value="272822514"><br>
+      <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="Billy"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Bob"><br><br>
-        <input type="button" onclick="searchByName()" value="Submit">
+      <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="Bob"><br>
+      <label for="personGender">Gender:</label><br>
+        <input type="text" id="gender" name="gender" value=""><br>
+      <label for="personAge">Date of Birth:</label><br>
+        <input type="text" id="age" name="age" value=""><br>
+      <label for="personHeight">Height:</label><br>
+        <input type="text" id="height" name="height" value=""><br>
+      <label for="personeWeight">Weight:</label><br>
+        <input type="text" id="weight" name="weight" value=""><br>
+      <label for="personEyeColor">Eye Color:</label><br>
+        <input type="text" id="eyeColor" name="eyeColor" value=""><br>
+      <input type="button" onclick="searchByName()" value="Submit">
     </form> 
     <table class="table"id = "myTable" >
          
