added fuction to remove unwanted data from the table and replace it with only the data searched for

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <form id="nameForm">
       <label for="peopleId">Id:</label><br>
-        <input type="text" id="peopleId" name="peopleId" value="272822514"><br>
+        <input type="text" id="peopleId" name="peopleId" value=""><br>
       <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="Billy"><br>
+        <input type="text" id="fname" name="fname" value=""><br>
       <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Bob"><br>
+        <input type="text" id="lname" name="lname" value=""><br>
       <label for="personGender">Gender:</label><br>
         <input type="text" id="gender" name="gender" value=""><br>
       <label for="personAge">Date of Birth:</label><br>
@@ -23,8 +23,8 @@
       <label for="personeWeight">Weight:</label><br>
         <input type="text" id="weight" name="weight" value=""><br>
       <label for="personEyeColor">Eye Color:</label><br>
-        <input type="text" id="eyeColor" name="eyeColor" value=""><br>
-      <input type="button" onclick="searchByName()" value="Submit">
+        <input type="text" id="eyeColor" name="eyeColor" value="blue"><br>
+      <input type="button" onclick="searchByName()" onclick="replaceTable()" value="Submit">
     </form> 
     <table class="table"id = "myTable" >
          
