--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <label for="personeWeight">Weight:</label><br>
         <input type="text" id="weight" name="weight" value=""><br>
       <label for="personEyeColor">Eye Color:</label><br>
-        <input type="text" id="eyeColor" name="eyeColor" value="blue"><br>
+        <input type="text" id="eyeColor" name="eyeColor" value=""><br>
       <input type="button" onclick="searchByName()" value="Submit">
+      <input type="button" onclick="displayFamilyMembers()" value="Display">
+      <button onClick="window.location.reload();">Reset</button>
     </form> 
     <table class="table"id = "myTable" >
          
