--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <label for="personEyeColor">Eye Color:</label><br>
         <input type="text" id="eyeColor" name="eyeColor" value=""><br>
       <input type="button" onclick="searchByName()" value="Submit">
-      <input type="button" onclick="displayFamilyMembers()" value="Display">
+      <input type="button" onclick="displayFamilyMembers()" value="Display Descendants">
       <button onClick="window.location.reload();">Reset</button>
     </form> 
     <table class="table"id = "myTable" >
