added alert for invalid search and resets page. added display all family members button, added siblings heading to table.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <input type="text" id="eyeColor" name="eyeColor" value=""><br>
       <input type="button" onclick="searchByName()" value="Submit">
       <input type="button" onclick="displayFamilyMembers()" value="Display Descendants">
+      <input type="button" onclick="displayAllFamilyMembers()" value="Display All Family Members">
       <button onClick="window.location.reload();">Reset</button>
     </form> 
     <table class="table"id = "myTable" >
@@ -42,6 +43,7 @@
           <th scope="col">Weight</th>
           <th scope="col">Eye Color</th>
           <th scope="col">Parents</th>
+          <th scope="col">Siblings</th>
           <th scope="col">Current Spouse</th>
         </tr>
       </thead>
